force-app/main/default/objects/OrderItem/fields/ERUM_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Impuesto__c</fullName>
    <defaultValue>21/100</defaultValue>
    <label>Impuesto (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>