force-app/main/default/objects/OrderItem/fields/Grupo_contable_correcto__c.field-meta.xml
<CustomField>
    <fullName>Grupo_contable_correcto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grupo contable correcto</label>
    <type>Checkbox</type>
</CustomField>