force-app/main/default/objects/OrderItem/fields/PackingUnit__c.field-meta.xml
<CustomField>
    <fullName>PackingUnit__c</fullName>
    <formula>PricebookEntry.Product2.ERUM_Unidad_embalaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>