force-app/main/default/objects/OrderItem/fields/QuieresRedondearCantidad__c.field-meta.xml
<CustomField>
    <fullName>QuieresRedondearCantidad__c</fullName>
    <label>Quieres redondear la Cantidad?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>