force-app/main/default/objects/OrderItem/fields/Volumen_m3__c.field-meta.xml
<CustomField>
    <fullName>Volumen_m3__c</fullName>
    <label>Volumen (m3)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>